--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,14 @@
   </properties>
 
   <dependencies>
-  
+	  <!-- https://mvnrepository.com/artifact/org.testng/testng -->
+	  <dependency>
+		  <groupId>org.testng</groupId>
+		  <artifactId>testng</artifactId>
+		  <version>7.1.0</version>
+		  <scope>test</scope>
+	  </dependency>
+
 	  <!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
 	<dependency>
 	    <groupId>io.rest-assured</groupId>
@@ -48,6 +55,13 @@
 	    <groupId>org.apache.poi</groupId>
 	    <artifactId>poi-ooxml</artifactId>
 	    <version>4.1.0</version>
+	</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
+	<dependency>
+	    <groupId>com.aventstack</groupId>
+	    <artifactId>extentreports</artifactId>
+	    <version>4.1.3</version>
 	</dependency>
 		
 	  
